--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,10 +30,10 @@ jobs:
     - name: Install ganache
       run: npm install -g ganache-cli@6.12.1
 
-    - name: Set up python 3.8
+    - name: Set up python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
 
     - name: Set pip cache directory path
       id: pip-cache-dir-path
@@ -59,6 +59,7 @@ jobs:
 
     - name: Run Tests
       env:
-        ETHERSCAN_TOKEN: MW5CQA6QK5YMJXP2WP3RA36HM5A7RA1IHA
-        WEB3_INFURA_PROJECT_ID: b7821200399e4be2b4e5dbdf06fbe85b
+        ETHERSCAN_TOKEN: "MW5CQA6QK5YMJXP2WP3RA36HM5A7RA1IHA"
+        WEB3_INFURA_PROJECT_ID: "b7821200399e4be2b4e5dbdf06fbe85b"
+        BSCSCAN_TOKEN: "Y6ZWETR9772QB2B3NSPGWVKK36Q513U853"
       run: brownie test
